examples/pts/neg/externDefReturn.effekt
module examples/pts/neg/externDefReturn

extern def func(x: _): _ / _ = "Test"

def main() = {
    ()
}